[gd_scene load_steps=4 format=3 uid="uid://dxr5klbnr8q21"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_27bco"]
[ext_resource type="Texture2D" uid="uid://dp0sxnwk78u71" path="res://Assets/reset.png" id="2_k082j"]
[ext_resource type="Texture2D" uid="uid://xcic8cue4r2g" path="res://Assets/score-box.png" id="3_x68vp"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_27bco")

[node name="gameover_screen" type="Node2D" parent="."]

[node name="reset_button" type="Button" parent="gameover_screen"]
self_modulate = Color(1, 1, 1, 0)
offset_left = 56.0
offset_top = 182.0
offset_right = 173.0
offset_bottom = 206.0

[node name="Sprite2D" type="Sprite2D" parent="gameover_screen/reset_button"]
position = Vector2(58, 10)
scale = Vector2(0.318828, 0.199883)
texture = ExtResource("2_k082j")

[node name="gameover_message" type="Node2D" parent="gameover_screen"]

[node name="Sprite2D" type="Sprite2D" parent="gameover_screen/gameover_message"]
position = Vector2(112, 99)
scale = Vector2(0.336426, 0.233887)
texture = ExtResource("3_x68vp")

[node name="score" type="Label" parent="gameover_screen/gameover_message"]
offset_left = 80.0
offset_top = 89.0
offset_right = 179.0
offset_bottom = 112.0
text = "Score: 0"

[connection signal="pressed" from="gameover_screen/reset_button" to="." method="_on_reset_button_pressed"]
